--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,13 @@
 version: "3.8"
-
 services:
-
   online_shop:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    image: your-dockerhub-username/online-shop:latest 
     container_name: online_shop
     ports:
       - "3000:5173"
     restart: always
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:3000/"]
+      test: ["CMD", "curl", "-f", "http://localhost:5173/"] 
       interval: 60s
       timeout: 10s
       retries: 5
