--- a/.github/workflows/cdcd.yml
+++ b/.github/workflows/cdcd.yml
@@ -10,7 +10,7 @@ env:
 
 jobs:
   build-and-push:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     
     steps:
       - name: Checkout code
@@ -36,7 +36,7 @@ jobs:
 
   deploy-to-kind:
     needs: build-and-push
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     
     steps:
       - name: Checkout code
