--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -16,5 +16,13 @@ spec:
       containers:
       - name: online-shop
         image: sumit2703/online-shop:latest
+        imagePullPolicy: Always
         ports:
         - containerPort: 80
+        resources:
+          requests:
+            cpu: "100m"
+            memory: "128Mi"
+          limits:
+            cpu: "500m"
+            memory: "512Mi"
